<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotmail.oswaldosaldivar.trabajador.MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/escrol">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/lineal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/texto1"
            android:text="@string/recibo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numero"
            android:text="@string/numero"
            android:layout_marginTop="5dp"
            android:background="#b8e5f9" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_empleado"
            android:hint="@string/colocar_numero"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombre"
            android:text="@string/nombre"
            android:layout_marginTop="5dp"
            android:background="#b8e5f9" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nombre_empleado"
            android:hint="@string/colocar_nombre"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dias"
            android:text="@string/dias"
            android:layout_marginTop="5dp"
            android:background="#b8e5f9" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dias_trabajados"
            android:hint="@string/colocar_dias_trabajados"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sueldo_dia"
            android:text="@string/sueldo_dia"
            android:layout_marginTop="5dp"
            android:background="#b8e5f9" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sueldo_diario"
            android:hint="@string/sueldo_diario"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sueldo_total"
            android:text="@string/sueldo_total"
            android:layout_marginTop="5dp"
            android:background="#b8e5f9" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sueldo_final"
            android:hint="@string/sueldo_final"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calcular"
            android:text="@string/realizar_calculo"
            />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fecha"
            >
        </DatePicker>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton"
            android:text="@string/poner_fecha"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fecha_mostrar"
            android:hint="@string/fecha_pago"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            />


    </LinearLayout>

</ScrollView>



</android.support.design.widget.CoordinatorLayout>
